--- a/src/App.scss
+++ b/src/App.scss
@@ -49,4 +49,44 @@ nav {
 .ticket-card {
    display: flex;
    width: 100%;
+
+   .ticket-color {
+      width: 15px;
+      margin: 2px;
+      background-color: slateblue;
+   }
+
+   #link {
+      display: flex;
+      width: 100%;
+      gap: 5px;
+      // * {
+      //    background-color: rgb(221,221,221);
+      //    margin: 2px;
+      //    padding: 30px;
+      //    width: 100%;
+      //    display: flex;
+      //    align-items: center;
+      // }
+   }
+
+}
+
+.avatar {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 80px;
+
+   &__image-container {
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      overflow: hidden;
+   }
+
+   &__image {
+      width: 100%;
+      display: block;
+   }
 }
