--- a/src/App.scss
+++ b/src/App.scss
@@ -128,3 +128,23 @@ nav {
       height: 100%;
    }
 }
+
+.delete {
+   background-color: rgb(211,211,211);
+   width: 50px;
+   margin: 2px;
+   justify-content: center;
+   align-items: center;
+   display: flex;
+
+   &__button {
+      width: 20px;
+      height: 20px;
+      border-radius: 10px;
+      background-color: rgb(61,61,61);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+   }
+}
