--- a/src/styles/_ticket-page.scss
+++ b/src/styles/_ticket-page.scss
@@ -36,4 +36,15 @@
          margin: 20px 0 20px 0;
       }
    }
+
+   &__avatar {
+      max-width: 180px;
+      border-radius: 50%;
+      overflow: hidden;
+      margin-top: 1.5rem;
+
+      img {
+         display: block;
+      }
+   }
 }
