--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -9,16 +9,25 @@ nav {
 
    .logo-container,
    .controls-container {
-      padding: 40px 25px;
+      padding: 40px 10px;
       display: flex;
       flex-direction: column;
+      align-items: center;
    }
 
    img {
-      width: 20px;
+      width: 50px;
+      cursor: pointer;
    }
 
    .icon {
       color: white;
+      font-size: 25px;
+      width: 30px;
+      height: 30px;
+      border: 1px solid rgba(255, 255, 255, 0.45);
+      margin: 3px 0;
+      border-radius: 3px;
+      cursor: pointer;
    }
 }
